--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
   background: var(--dark-color);
   color: var(--light-color);
   margin: 30px 50px;
+  overflow-x: hidden;
 }
 
 .btn {
@@ -52,15 +53,15 @@ img {
   width: 100%;
 }
 
-/* Showcase */
-.showcase {
+/* Showcase Home Page */
+.showcase-home {
   width: 100%;
-  height: 85vh;
+  height: 100vh;
   position: relative;
   background: url("../img/home.jpg") no-repeat center center/cover;
 }
 
-.showcase::after {
+.showcase-home::after {
   content: "";
   position: absolute;
   top: 0;
@@ -73,40 +74,43 @@ img {
     inset -120px -100px 250px var(--dark-color);
 }
 
-.showcase-top {
+.showcase-home-top {
   position: relative;
   z-index: 2;
   height: 120px;
 }
 
-.showcase-top img {
+.showcase-home-top img {
   width: 130px;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 10%;
   transform: translate(-50%, -50%);
   margin-left: 0;
 }
 
-.showcase-top img:hover {
+.showcase-home-top img:hover {
+  display: inline-block;
+  color: var(--dark-color);
+  background: var(--dark-color);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.45);
   border-radius: 10px;
   cursor: pointer;
 }
 
-.showcase-top a {
+.showcase-home-top a {
   position: absolute;
   top: 50%;
   right: 5%;
   transform: translate(-50%, -50%);
 }
 
-.showcase-top a:hover {
+.showcase-home-top a:hover {
   background: var(--light-color);
   color: var(--dark-color);
 }
 
-.showcase-content {
+.showcase-home-content {
   position: relative;
   z-index: 2;
   width: 90%;
@@ -119,20 +123,154 @@ img {
   margin-top: 1rem;
 }
 
-.showcase-content h1 {
+.showcase-home-content h1 {
   font-weight: 700;
   font-size: 4rem;
   line-height: 4rem;
   margin: 0 1rem;
 }
 
-.showcase-content p {
+.showcase-home-content p {
   text-transform: uppercase;
   color: var(--light-color);
   font-weight: 400;
   font-size: 1rem;
   line-height: 2;
   margin: 11rem 0 4rem;
+}
+/* Showcase Search Page */
+.showcase-search {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: url("../img/search.jpg") no-repeat center center/cover;
+}
+
+.showcase-search::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 120px 100px 250px var(--primary-color),
+    inset -120px -100px 250px var(--dark-color);
+}
+
+.showcase-search-top {
+  position: relative;
+  z-index: 2;
+  height: 120px;
+}
+
+.showcase-search-top img {
+  width: 130px;
+  position: relative;
+  top: 50%;
+  left: 10%;
+  transform: translate(-50%, -50%);
+  margin-left: 0;
+}
+
+.showcase-search-top img:hover {
+  display: inline-block;
+  color: var(--dark-color);
+  background: var(--dark-color);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.45);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.showcase-search-top a {
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  transform: translate(-50%, -50%);
+}
+
+.showcase-search-top a:hover {
+  background: var(--light-color);
+  color: var(--dark-color);
+}
+
+.showcase-search-content {
+  position: relative;
+  z-index: 2;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+.showcase-search-content h1 {
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 4rem;
+  margin: 0 1rem;
+}
+
+.showcase-search-content p {
+  text-transform: uppercase;
+  color: var(--light-color);
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 2;
+  margin: 7rem 0 4rem;
+}
+
+.showcase-search-content .cross {
+  color: var(--primary-color);
+  font-size: 50px;
+  padding: 0.6rem;
+}
+
+.showcase-search-content .searchbox {
+  position: fixed;
+  top: 70%;
+  left: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.showcase-search-content .form-area {
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  width: 100%;
+  border-bottom: 1px solid var(--light-color);
+}
+
+.showcase-search-content .form-area input {
+  flex: 1 1 auto;
+  background-color: var(--light-color);
+  border: 0;
+  height: 80px;
+  font-size: 35px;
+  width: 100%;
+  padding-left: 20px;
+}
+
+.showcase-search-content .form-area btn-lg {
+  background-color: var(--primary-color);
+  padding: 0 0;
+  border: none;
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: var(--red-color);
+  cursor: pointer;
+}
+
+.form-area input::placeholder {
+  color: var(--dark-color);
+  letter-spacing: 1px;
 }
 
 /* Navigation */
@@ -203,6 +341,24 @@ img {
   color: var(--red-color);
 }
 
+.btn-lg {
+  background: var(--red-color);
+  color: var(--green-color);
+  font-size: 1rem;
+  padding: 0.8rem 1.3rem;
+  /* margin-top: 10rem; */
+  text-transform: uppercase;
+}
+
+.btn-lg:hover {
+  background: var(--green-color);
+  color: var(--red-color);
+}
+
+.btn-icon {
+  margin-left: 1rem;
+}
+
 /* Footer */
 hr {
   width: 100%;
@@ -229,7 +385,8 @@ hr {
 
 .footer img:hover {
   display: inline-block;
-  background-color: var(--primary-color);
+  color: var(--primary-color);
+  background: var(--primary-color);
   box-shadow: 5px 5px 5px rgba(220, 121, 62, 0.45);
   border-radius: 10px;
 }
@@ -270,7 +427,7 @@ hr {
 
 .cart {
   display: flex;
-  box-sizing: block;
+  box-sizing: inline-block;
   align-items: center;
   justify-content: center;
   cursor: pointer;
@@ -302,10 +459,3 @@ hr {
 .social ul li:hover {
   color: var(--primary-color);
 }
-
-/* .footer .img {
-  display: block;
-  width: 130px;
-  margin-left: 10%;
-  justify-content: center;
-} */
