--- a/css/style.css
+++ b/css/style.css
@@ -298,26 +298,122 @@ img {
   background: var(--light-color);
   color: var(--dark-color);
   display: block;
-  padding: 1.3rem 5rem;
+  padding: 1rem 5rem;
   margin: 5px;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border-radius: 40px;
 }
 
 .subtotal p {
   background: var(--light-color);
   color: var(--dark-color);
-  /* width: 100px; */
   display: inline-block;
-  padding: 1.3rem 5rem;
-  margin: 20px;
+  padding: 1rem 15rem;
+  margin: 50px;
   text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border-radius: 40px;
   opacity: 0.8;
+}
+
+/* Showcase Create Account Page */
+.showcase-createacc {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: url("../img/createacc.jpg") no-repeat center center/cover;
+}
+
+.showcase-createacc::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 120px 100px 250px var(--dark-color),
+    inset -120px -100px 250px var(--dark-color);
+}
+
+.showcase-createacc * {
+  box-sizing: border-box;
+  color: var(--primary-color);
+}
+
+form {
+  max-width: 300px;
+  margin: 20px auto;
+  padding: 100px auto;
+  background: var(--dark-color);
+  border-radius: 8px;
+}
+
+fieldset {
+  width: 90%;
+  border: none;
+}
+
+input[type="email"],
+input[type="password"],
+input[type="date"] {
+  background: rgba(0, 0, 0, 0.8);
+  border: none;
+  font-size: 1.5rem;
+  height: auto;
+  margin: 20px;
+  outline: 0;
+  padding: 15px;
+  width: 70%;
+  background-color: var(--light-color);
+  color: var(--dark-color);
+  box-shadow: 3px 3px rgba(220, 121, 61, 0.9);
+  margin-bottom: 30px;
+  opacity: 0.8;
+}
+
+input:focus {
+  box-shadow: 0 0 5px rgba(220, 121, 61, 0.9);
+  border: 5px solid rgba(220, 121, 61, 0.9);
+}
+
+input[type="radio"] {
+  margin: 0 4x 8px 0;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 20px;
+  font-size: 1.2rem;
+}
+
+label.light {
+  font-weight: 300;
+  display: inline-block;
+}
+
+button {
+  padding: 20px 40px;
+  color: var(--green-color);
+  background-color: var(--red-color);
+  font-size: 1.5rem;
+  text-align: center;
+  border-radius: 10px;
+  width: 50%;
+  border: 1px solid var(--primary-color);
+  border-width: 2px 2px 4px;
+  box-shadow: 0 -1px 0 rgba(220, 121, 61, 0.9) inset;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+button:hover {
+  color: var(--red-color);
+  background-color: var(--green-color);
 }
 
 /* Navigation */
